Список коллекций работает

--- a/InfoBaseListManager/MainWindow.xaml
+++ b/InfoBaseListManager/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Менеджер информационных баз" Height="350" Width="525"
         xmlns:local="clr-namespace:InfoBaseListManager" Closed="Window_Closed" Closing="Window_Closing">
-    
+
     <Window.Resources>
         <local:LastTimeToBrushConverter x:Key="LastTimeToBrushConverter"/>
         <Grid x:Key="PlusGrid">
@@ -14,25 +14,25 @@
             <Rectangle Stretch="UniformToFill" Fill="Red" Height="3"></Rectangle>
         </Grid>
     </Window.Resources>
-    
-    <Grid>        
+
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
             <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>            
+            <ColumnDefinition Width="2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        
-        <StackPanel Name="stackConfig" Margin="3" Grid.Row="0" Grid.ColumnSpan="3" Orientation="Horizontal">            
+
+        <StackPanel Name="stackConfig" Margin="3" Grid.Row="0" Grid.ColumnSpan="3" Orientation="Horizontal">
             <Label>Организация:</Label>
             <ComboBox Name="cbPoolList" Width="200" SelectedItem="{Binding CurrentPool}" SelectionChanged="cbPoolList_SelectionChanged"/>
             <Button Margin="10,0" Name="btnSettings" Click="btnSettings_Click">Настройки...</Button>
         </StackPanel>
-        
+
         <Grid Grid.Row ="1" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -51,10 +51,10 @@
                             <Label Content="{Binding Path=ComputerName}"/>
                         </StackPanel>
                     </DataTemplate>
-                </ListBox.ItemTemplate>            
+                </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
-            
+
         <Grid Grid.Row ="1" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -75,7 +75,7 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
-        
+
         <Grid Grid.Row ="1" Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -85,17 +85,17 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            
+
             <Label>Информационные базы:</Label>
 
-            <TreeView Grid.Row="1" Name="tvInfobases" MouseDoubleClick="tvInfobases_MouseDoubleClick">                
+            <TreeView Grid.Row="1" Name="tvInfobases" MouseDoubleClick="tvInfobases_MouseDoubleClick">
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Path=ChildInfoBases}">
-                        <TextBlock Text="{Binding Path=IBText}" FontWeight="Bold"/>                        
+                        <TextBlock Text="{Binding Path=IBText}" FontWeight="Bold"/>
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
             </TreeView>
-            
+
             <ToolBarPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical">
                 <Button Name="btnAdd" Click="btnAdd_Click">Добавить</Button>
                 <Button Name="btnDelete" Click="btnDelete_Click">Удалить</Button>
@@ -108,25 +108,22 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            
+
             <Label Grid.Row="0">Сохраненные списки:</Label>
-            
-            <ToolBarPanel Grid.Row="1" Orientation="Horizontal"> 
-                <Button Name="btnAddCollection" Width="21" Height="21" Padding="1" Margin="2" Content="{StaticResource PlusGrid}"/>
-                <Button Name="btnRemoveCollection" Width="21" Height="21" Padding="1" Margin="2" Content="{StaticResource MinusGrid }"/>                                   
+
+            <ToolBarPanel Grid.Row="1" Orientation="Horizontal">
+                <Button Name="btnAddCollection" Width="21" Height="21" Padding="1" Margin="2,0,2,2" Content="{StaticResource PlusGrid}" VerticalAlignment="Bottom" Click="btnAddCollection_Click"/>
+                <Button Name="btnRemoveCollection" Width="21" Height="21" Padding="1" Margin="2" Content="{StaticResource MinusGrid }" Click="btnRemoveCollection_Click"/>
             </ToolBarPanel>
-            
-            <ListBox Grid.Row="2" Name="lbInfoBaseCollections" SelectionMode="Single" SelectionChanged="lbComps_SelectionChanged">
+
+            <ListBox Grid.Row="2" Name="lbInfoBaseCollections" SelectionMode="Single" SelectionChanged="lbInfoBaseCollections_SelectionChanged" MouseDoubleClick="lbInfoBaseCollections_MouseDoubleClick">
                 <ListBox.Resources>
                     <SolidColorBrush Color="LightGray" x:Key ="{x:Static SystemColors.HighlightBrushKey}">
                     </SolidColorBrush>
                 </ListBox.Resources>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <Ellipse Width="8" Height="8" Fill="{Binding Path=IsOnline,Converter={StaticResource LastTimeToBrushConverter}}"/>
-                            <Label Content="{Binding Path=ComputerName}"/>
-                        </StackPanel>
+                        <Label Content="{Binding Path=Name}"/>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
