--- a/InfoBaseListManager/MainWindow.xaml
+++ b/InfoBaseListManager/MainWindow.xaml
@@ -1,25 +1,18 @@
 ﻿<Window x:Class="InfoBaseListManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Менеджер информационных баз" Height="350" Width="525"
+        Title="Менеджер информационных баз" Height="500" Width="800"
         xmlns:local="clr-namespace:InfoBaseListManager" Closed="Window_Closed" Closing="Window_Closing">
 
     <Window.Resources>
-        <local:LastTimeToBrushConverter x:Key="LastTimeToBrushConverter"/>
-        <Grid x:Key="PlusGrid">
-            <Rectangle Stretch="UniformToFill" Fill="Green" Height="3"></Rectangle>
-            <Rectangle Stretch="UniformToFill" Fill="Green" Width="3"></Rectangle>
-        </Grid>
-        <Grid x:Key="MinusGrid">
-            <Rectangle Stretch="UniformToFill" Fill="Red" Height="3"></Rectangle>
-        </Grid>
+        <local:LastTimeToBrushConverter x:Key="LastTimeToBrushConverter"/>        
     </Window.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
             <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="3*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -102,7 +95,7 @@
             </ToolBarPanel>
         </Grid>
 
-        <Grid Grid.Row ="2" Grid.Column="0">
+        <Grid Grid.Row ="2" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -112,8 +105,17 @@
             <Label Grid.Row="0">Сохраненные списки:</Label>
 
             <ToolBarPanel Grid.Row="1" Orientation="Horizontal">
-                <Button Name="btnAddCollection" Width="21" Height="21" Padding="1" Margin="2,0,2,2" Content="{StaticResource PlusGrid}" VerticalAlignment="Bottom" Click="btnAddCollection_Click"/>
-                <Button Name="btnRemoveCollection" Width="21" Height="21" Padding="1" Margin="2" Content="{StaticResource MinusGrid }" Click="btnRemoveCollection_Click"/>
+                <Button Name="btnAddCollection" Width="21" Height="21" Padding="1" Margin="2" Click="btnAddCollection_Click">
+                    <Grid>
+                        <Rectangle Stretch="UniformToFill" Fill="Green" Height="3"></Rectangle>
+                        <Rectangle Stretch="UniformToFill" Fill="Green" Width="3"></Rectangle>
+                    </Grid>
+                </Button>
+                <Button Name="btnRemoveCollection" Width="21" Height="21" Padding="1" Margin="2" Click="btnRemoveCollection_Click">
+                    <Grid>
+                        <Rectangle Stretch="UniformToFill" Fill="Red" Height="3"></Rectangle>
+                    </Grid>
+                </Button>
             </ToolBarPanel>
 
             <ListBox Grid.Row="2" Name="lbInfoBaseCollections" SelectionMode="Single" SelectionChanged="lbInfoBaseCollections_SelectionChanged" MouseDoubleClick="lbInfoBaseCollections_MouseDoubleClick">
@@ -124,6 +126,42 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Label Content="{Binding Path=Name}"/>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Grid>
+
+        <Grid Grid.Row ="2" Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="0">-</Label>
+
+            <ToolBarPanel Grid.Row="1" Orientation="Horizontal">
+                <Button Name="btnAddStoredInfoBase" Width="21" Height="21" Padding="1" Margin="2" Click="btnAddStoredInfoBase_Click">
+                    <Grid>
+                        <Rectangle Stretch="UniformToFill" Fill="Green" Height="3"></Rectangle>
+                        <Rectangle Stretch="UniformToFill" Fill="Green" Width="3"></Rectangle>
+                    </Grid>
+                </Button>
+                <Button Name="btnRemoveStoredInfoBase" Width="21" Height="21" Padding="1" Margin="2" Click="btnRemoveStoredInfoBase_Click">
+                    <Grid>
+                        <Rectangle Stretch="UniformToFill" Fill="Red" Height="3"></Rectangle>
+                    </Grid>
+                </Button>
+            </ToolBarPanel>
+
+            <ListBox Grid.Row="2" Name="lbStoredInfoBases" SelectionMode="Single" MouseDoubleClick="lbStoredInfoBases_MouseDoubleClick">
+                <ListBox.Resources>
+                    <SolidColorBrush Color="LightGray" x:Key ="{x:Static SystemColors.HighlightBrushKey}">
+                    </SolidColorBrush>
+                </ListBox.Resources>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label MouseDown="Label_MouseDown" Content="{Binding Path=InfobaseName}"/>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
