--- a/InfoBaseListManager/InfoBaseForm.xaml
+++ b/InfoBaseListManager/InfoBaseForm.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="InfoBaseListManager.InfoBaseForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Редактирование данных информационной базы" Width="500" SizeToContent="Height" Loaded="Window_Loaded">
+        Title="Редактирование данных информационной базы" Width="500" SizeToContent="Height" Loaded="Window_Loaded" Icon="Resources/fav.ico" ResizeMode="NoResize">
     <Window.Resources>
         <Style x:Key="{x:Type TextBlock}">
             <Setter Property="Control.Margin" Value="3"/>
@@ -26,23 +26,23 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0">Имя базы:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="0" Name="tbInfoBaseName" Text="{Binding Path=InfobaseName}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="0" Name="tbInfoBaseName" Text="{Binding Path=InfobaseName, UpdateSourceTrigger=PropertyChanged}"></TextBox>
         
         <TextBlock Grid.Column="0" Grid.Row="1">Строка соединения:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="1" Name="tbConnect" Text="{Binding Path=Connect}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="1" Name="tbConnect" Text="{Binding Path=Connect, UpdateSourceTrigger=PropertyChanged}"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="2">Папка:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="2" Name="tbFolder" Text="{Binding Path=Folder}" IsReadOnly="True"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="2" Name="tbFolder" Text="{Binding Path=Folder, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="3">App:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="3" Name="tbApp" Text="{Binding Path=App}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="3" Name="tbApp" Text="{Binding Path=App, UpdateSourceTrigger=PropertyChanged}"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="4">Авторизация Windows:</TextBlock>
-        <!-- ReSharper disable once InconsistentNaming -->
-        <TextBox Grid.Column="1" Grid.Row="4" Name="tbWA" Text="{Binding Path=WA}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="4" Name="tbWA" Text="{Binding Path=WA, UpdateSourceTrigger=PropertyChanged}"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="5">Версия:</TextBlock>
-        <TextBox Grid.Column="1" Grid.Row="5" Name="tbVersion" Text="{Binding Path=Version}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="5" Name="tbVersion" Text="{Binding Path=Version, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        
         <StackPanel Grid.Column="1" Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="btnOk" Padding="5" Margin="3" IsDefault="True" Click="btnOk_Click">OK</Button>
             <Button Name="btnCancel" Padding="5" Margin="3" Click="btnCancel_Click">Cancel</Button>
