--- a/InfoBaseListManager/SettingsForm.xaml
+++ b/InfoBaseListManager/SettingsForm.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="InfoBaseListManager.SettingsForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Настройки" Height="300" Width="300" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="Настройки" Height="300" Width="300" Loaded="Window_Loaded" Closing="Window_Closing" Icon="Resources/fav.ico" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
