--- a/InfoBaseListManager/MainWindow.xaml
+++ b/InfoBaseListManager/MainWindow.xaml
@@ -125,7 +125,7 @@
                 </ListBox.Resources>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Label Content="{Binding Path=Name}"/>
+                        <Label Content="{Binding Path=Name}" MouseMove="lbInfoBaseCollections_Label_MouseMove"/>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
